# nbtopdfwin

./: .gitignore  README.md  pyproject.toml
ipynbtopdf/: latex.py  main.py  pdf.py  test_latex.ipynb
nbtopdfwin/: __main__.py  latex.py  pdf.py
tests/: conftest.py  test_latex.py  test_latex.tex  test_main.py  test_notebook.ipynb  test_pdf.py
