[tool.poetry]
name = "ipynbtopdf"
version = "0.1.0"
description = ""
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nbconvert = "^7.2.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
